Attempt to use slack module, fixup image generation

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "body-parser": "1.0.2",
         "express": "4.0.0",
         "q": "1.0.1",
-        "underscore": "1.7.0"
+        "underscore": "1.7.0",
+        "slack": "^6.1.0"
     }
 }
